--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,8 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_settings">Settings</string>
     <string name="pref_title_auto_play">AutoPlay</string>
+    <string name="pref_title_mobile">Open as mobile</string>
     <string name="pref_description_auto_play">Auto play when video is ready</string>
+    <string name="pref_description_mobile">Use mobile version web page when title clicked</string>
 
 </resources>
